--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,3 +3,14 @@
   margin-inline: auto;
   padding-inline: 0.75rem;
 }
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-areas:
+    "user loyalty-card"
+    "history loyalty-card"
+    "history progess";
+  column-gap: 1.5rem;
+  row-gap: 1rem;
+}
