--- a/src/styles/loyalty-card.css
+++ b/src/styles/loyalty-card.css
@@ -10,11 +10,13 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    gap: 1rem;
 
     div {
       display: flex;
       flex-direction: column;
       gap: 0.25rem;
+      flex: 1;
 
       h2 {
         font: var(--subtitle-sm);
@@ -64,6 +66,39 @@
     .gift-icon {
       width: 2.5rem;
       height: 2.5rem;
+    }
+  }
+}
+
+@media (max-width: 37.5rem) {
+  .loyalty-card-container {
+    padding: 1.5rem 1.25rem 1.25rem 1.25rem;
+
+    header {
+      >span {
+        font: var(--subtitle-sm);
+      }
+    }
+  }
+
+  .slots-container {
+    margin-top: 1.25rem;
+    gap: 0.5rem;
+    border-radius: 12px;
+
+    .slot {
+      width: 3.5rem;
+      height: 3.5rem;
+
+      img {
+        width: 2.5rem;
+        height: 2.5rem;
+      }
+
+      .gift-icon {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
     }
   }
 }
