--- a/src/styles/progress.css
+++ b/src/styles/progress.css
@@ -30,7 +30,7 @@
     background-color: var(--gray-200);
 
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     border-radius: 50%;
 
@@ -63,5 +63,20 @@
     display: inline-block;
     font: var(--text-xs);
     color: var(--gray-500);
+  }
+}
+
+@media (max-width: 37.5rem) {
+  .progress-container {
+    padding: 1.3125rem 1.25rem;
+
+    >div:nth-child(2) {
+      width: 3.5rem;
+      height: 3.5rem;
+
+      img {
+        width: 2.5rem;
+      }
+    }
   }
 }
